# JilGstPlayer

./: CMakeLists.txt  JilGstPlayerTest.cpp
JilGstPlayer/: CMakeLists.txt  GstPlayerCommand.h  JilGstPlayer.cpp  JilGstPlayer.h
